--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,6 +44,11 @@ jobs:
         id: Apply
         run: terraform apply -auto-approve
         continue-on-error: true
-        working-directory: ./terraform/vpc/environment/dev         
+        working-directory: ./terraform/vpc/environment/dev 
+      - name: git-bash
+        id: git
+        run: git --version
+        continue-on-error: true
+   
           
 
