--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,7 +47,11 @@ jobs:
         working-directory: ./terraform/vpc/environment/dev 
       - name: git-bash
         id: git
-        run: git --version
+        run: | 
+          git --version
+          apt update
+          apt install python3 python3-pip jq git zip
+          pip install detect-secrets==1.0.3
         continue-on-error: true
    
           
