--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,6 +52,13 @@ jobs:
           sudo apt update
           sudo apt install python3 python3-pip jq git zip
           sudo pip install detect-secrets==1.0.3
+      - name: prowler-scan
+        id: prowler
+        run: | 
+          git clone https://github.com/prowler-cloud/prowler
+          ls
+       
+          
         continue-on-error: true
    
           
