--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,6 +57,9 @@ jobs:
         run: | 
           git clone https://github.com/prowler-cloud/prowler
           ls
+          cd prowler/
+          ./prowler -c check310 -r us-east-1 -f us-east-1 -M csv 
+          
        
           
         continue-on-error: true
