--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -72,6 +72,8 @@ jobs:
          to: rajaram.s@cloudifyops.com
          from: github-action@gamil.com
          body: Build job of ${{github.repository}} completed successfully!
+         run: |
+            ls
     
           
           
