--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,6 +60,8 @@ jobs:
           cd prowler/
           ./prowler -c check22 -r us-east-1 -M html -B aws-raja-emr-output/prowler/
           pwd
+          cd /home/runner/work/githubactions-terraform-prowler/githubactions-terraform-prowler/prowler/output 
+          ls
       - name: Send email
         id: email
         uses: dawidd6/action-send-mail@v3.7.1
@@ -73,6 +75,7 @@ jobs:
          to: rajaram.s@cloudifyops.com
          from: github-action@gamil.com
          body: Build job of ${{github.repository}} completed successfully!
+         
          
     
           
