--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,7 +75,11 @@ jobs:
          to: rajaram.s@cloudifyops.com
          from: github-action@gamil.com
          body: Build job of ${{github.repository}} completed successfully!
-         attachments: ./home/runner/work/githubactions-terraform-prowler/githubactions-terraform-prowler/prowler/output/*.html
+         content_type: text/html
+         attach_file: cd /home/runner/work/githubactions-terraform-prowler/githubactions-terraform-prowler/prowler/output/*.html
+
+          
+
          
          
     
