--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,12 +49,15 @@ jobs:
       - name: prowler-scan
         id: prowler
         run: | 
-          git clone https://github.com/prowler-cloud/prowler
-          ls
-          cd prowler/
-          ./prowler -c check22 -r us-east-1 -M html -B aws-prowler-output/prowler/
+          sudo apt update
+          sudo apt install software-properties-common
+          sudo add-apt-repository ppa:deadsnakes/ppa
+          sudo apt install python3.9
+          python3.9 --version
+          sudo apt-get install python3-distutils
+          curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+          sudo python3.9 get-pip.py
           pwd
-          cd /home/runner/work/githubactions-terraform-prowler/githubactions-terraform-prowler/prowler/output 
           ls -ah
       - name: Send email
         id: email
