--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,7 +46,7 @@ jobs:
         continue-on-error: true
         working-directory: ./terraform/vpc/environment/dev 
       
-      - name: prowler-scan
+      - name: prowler
         id: prowler
         run: | 
           sudo apt update
@@ -57,10 +57,19 @@ jobs:
           sudo apt-get install python3-distutils
           curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
           sudo python3.9 get-pip.py
-          
-          
+          pip3.9 install prowler
+          prowler -v
           pwd
           ls -ah
+
+      - name: prowler-scan
+        id: prowler
+        run: | 
+          
+          pip3.9 install prowler
+          prowler -v
+          
+      
       - name: Send email
         id: email
         uses: dawidd6/action-send-mail@v3.7.1
