--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,8 +53,11 @@ jobs:
         run: | 
           sudo apt-get remove python3.8
           sudo apt autoremove python
-          python --version
-          python3 --version
+          sudo apt update
+          sudo apt install software-properties-common
+          sudo add-apt-repository ppa:deadsnakes/ppa
+          sudo apt install python3.9
+          python3.9 --version
           
          
           
