--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,6 +58,10 @@ jobs:
           sudo add-apt-repository ppa:deadsnakes/ppa
           sudo apt install python3.9
           python3.9 --version
+          sudo apt-get install python3-distutils
+          curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+          sudo python3.9 get-pip.py
+          pip3.9 --version
           
          
           
