--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,45 +1,64 @@
 name: Terraform GitHub Actions
+# every commit the actions will trigger 
 on:
    push:
     branches: [master]
+
+# build the first job using ubuntu image
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+
+      # passing the aws credentials through secrets
       - name: AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+
+      # it will create s3 bucket to store the terraform state file
       - name: AWS CLI
         run: |
           aws --version
           aws s3api create-bucket --bucket cloudgeeks-backend121 --region us-east-1
+
+      # it will install the terrafom 
       - name: Terraform Install
         uses: hashicorp/setup-terraform@v1
+
+      # it will allignt the terraform code in proper format 
       - name: Terraform fmt
         id: fmt
         run: | 
           terraform --version
           terraform fmt
         continue-on-error: true
-        working-directory: ./terraform/vpc/environment/dev         
+        working-directory: ./terraform/vpc/environment/dev  
+
+      # it will initialize the terraform folder and also initialize the backend state file      
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ./terraform/vpc/environment/dev         
+        working-directory: ./terraform/vpc/environment/dev   
+
+      # it will perform terraform vaildation in the code      
       - name: Terraform Validate
         id: validate
         run: terraform validate  
-        working-directory: ./terraform/vpc/environment/dev       
+        working-directory: ./terraform/vpc/environment/dev   
+
+      # it shows the detail output of  terraform plan     
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color
         continue-on-error: true
         working-directory: ./terraform/vpc/environment/dev 
+
+      # this command will deploy the terraform code 
       - name: Terraform Apply
         id: Apply
         run: terraform apply -auto-approve
@@ -47,7 +66,7 @@ jobs:
         working-directory: ./terraform/vpc/environment/dev 
 
       
-      
+      # for prowler python3.9 is dependency to install, and remove the python 3.8 to avoid conflict 
       - name: python
         id: python
         run: | 
@@ -65,17 +84,16 @@ jobs:
           pip3.9 install prowler
           prowler -v
 
+      # prowler execution commands  
       - name: prowler
         id: prowler
         run: | 
           prowler -v
-          prowler aws --list-services
-          prowler aws --services s3 ec2
-          prowler aws --services iam
+          prowler aws --services s3 ec2 vpc iam
+          prowler aws -f us-east-1
           
          
-          
-      
+      # this step will send the prowler audit report to the mail
       - name: Send email
         id: email
         uses: dawidd6/action-send-mail@v3.7.1
@@ -97,13 +115,7 @@ jobs:
 
           
 
-         
-         
-    
-          
-          
-       
-          
+           
         continue-on-error: true
    
           
